# trajkit

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
concepts/: index.html
concepts/parameters/: index.html
concepts/pipeline/: index.html
design/clean/: index.html
design/compare/: index.html
design/embed/: index.html
design/episode/: index.html
design/schemas/: index.html
design/segment/: index.html
docs/: index.md
docs/concepts/: index.md  parameters.md  pipeline.md
docs/design/: LIBRARY.md  clean.md  compare.md  embed.md  episode.md  schemas.md  segment.md
docs/reference/: baselines.md  clean.md  compare.md  embed.md  episode.md  index.md  io.md  presets.md  runner.md  segment.md  testing.md  types.md
examples/: quickstart.py
examples/fleet/: README.md
examples/geolife/: README.md  _explore_source.py  episode_anatomy.html  episode_similarity_map.html  explore.ipynb  reader.py  run.py  segment_anatomy.html  segments_map.html  similarity_map.html  stays_map.html  transits_map.html
reference/: index.html
reference/clean/: index.html
reference/compare/: index.html
reference/embed/: index.html
reference/episode/: index.html
reference/segment/: index.html
reference/testing/: index.html
reference/types/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/concepts/: index.html
site/concepts/parameters/: index.html
site/concepts/pipeline/: index.html
site/design/clean/: index.html
site/design/compare/: index.html
site/design/embed/: index.html
site/design/episode/: index.html
site/design/schemas/: index.html
site/design/segment/: index.html
site/reference/: index.html
site/reference/baselines/: index.html
site/reference/clean/: index.html
site/reference/compare/: index.html
site/reference/embed/: index.html
site/reference/episode/: index.html
site/reference/io/: index.html
site/reference/presets/: index.html
site/reference/runner/: index.html
site/reference/segment/: index.html
site/reference/testing/: index.html
site/reference/types/: index.html
site/search/: search_index.json
src/trajkit/: __init__.py  baselines.py  presets.py  runner.py  testing.py  types.py
src/trajkit/clean/: __init__.py  _clean.py  _params.py  _stale.py
src/trajkit/compare/: __init__.py  _anomaly.py  _index.py
src/trajkit/embed/: __init__.py  _baselines.py  _episodes.py  _params.py  _segments.py
src/trajkit/episode/: __init__.py  _detect.py  _params.py
src/trajkit/io/: __init__.py  _iter.py
src/trajkit/runner/: __init__.py  _params.py  _process.py  _report.py
src/trajkit/segment/: __init__.py  _aggregate.py  _params.py  _segment.py
src/trajkit/testing/: __init__.py
tests/: conftest.py
tests/integration/: test_pedestrian_pipeline.py
tests/unit/: test_baselines.py  test_clean.py  test_compare.py  test_embed.py  test_episode.py  test_io.py  test_presets.py  test_runner.py  test_schemas.py  test_segment.py  test_smoke.py  test_testing.py
