[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "trajkit"
dynamic = ["version"]
description = "Behavioral primitives for spatial-temporal traces — discretize, embed, compare."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "darmaaz", email = "undarmm@gmail.com" }]
keywords = ["trajectory", "gps", "telematics", "mobility", "embedding", "fleet"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.1",
    "numpy>=1.24",
    "pydantic>=2.5",
    "pandera>=0.18",
    "pyarrow>=14.0",
    "h3>=4.0",
    "pyproj>=3.6",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
search = ["faiss-cpu>=1.7"]
viz = ["matplotlib>=3.7", "folium>=0.15"]
fast = ["polars>=0.20"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "hypothesis>=6.92",
    "mypy>=1.8",
    "ruff>=0.1",
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    # ``[search]`` deps installed in dev so trajkit.compare is testable.
    "faiss-cpu>=1.7",
]

[project.urls]
Homepage = "https://github.com/darmaaz/trajkit"
Repository = "https://github.com/darmaaz/trajkit"
Changelog = "https://github.com/darmaaz/trajkit/blob/main/CHANGELOG.md"
Documentation = "https://github.com/darmaaz/trajkit/tree/main/docs"

[tool.hatch.version]
path = "src/trajkit/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/trajkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "RET", "SIM", "PD", "PT"]

[tool.ruff.lint.pep8-naming]
# Pandera DataFrameModel checks are class-level callables that conventionally
# take ``cls`` rather than ``self``. Treat the relevant decorators as classmethods.
classmethod-decorators = [
    "classmethod",
    "pandera.pandas.dataframe_check",
    "pandera.pandas.check",
    "pandera.dataframe_check",
    "pandera.check",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
files = ["src"]
