[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "trajkit"
dynamic = ["version"]
description = "Reference implementation of an end-to-end pipeline for spatial-temporal trace analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "darmaaz" }]
keywords = ["trajectory", "gps", "segmentation", "embedding", "similarity-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.1",
    "numpy>=1.24",
    "pydantic>=2.5",
    "pandera>=0.18",
    "pyarrow>=14.0",
    "h3>=4.0",
    "pyproj>=3.6",
    "faiss-cpu>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "hypothesis>=6.92",
    "mypy>=1.8",
    "ruff>=0.1",
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "matplotlib>=3.7",
    "folium>=0.15",
    "tabulate>=0.9",
    "jupyter>=1.0",
    "jupytext>=1.16",
    "nbconvert>=7.0",
]

[tool.hatch.version]
path = "src/trajkit/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/trajkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    # Jupytext notebook source + executed notebook + paired companion:
    # cell-based, intentional mid-file imports for path setup.
    "examples/geolife/_explore_source.py",
    "examples/geolife/explore.py",
    "examples/geolife/explore.ipynb",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "RET", "SIM", "PD", "PT"]

[tool.ruff.lint.pep8-naming]
# Pandera DataFrameModel checks are class-level callables that conventionally
# take ``cls`` rather than ``self``. Treat the relevant decorators as classmethods.
classmethod-decorators = [
    "classmethod",
    "pandera.pandas.dataframe_check",
    "pandera.pandas.check",
    "pandera.dataframe_check",
    "pandera.check",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
files = ["src"]
